kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: source-code-analyzer
  namespace: source-code-analyzer
  labels:
    app: source-code-analyzer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: source-code-analyzer
  template:
    metadata:
      labels:
        app: source-code-analyzer
    spec:
      containers:
      - name: analyzer-app
        image: bittush8789/source-code-analyzer:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: db-storage
          mountPath: /app/db
        - name: repo-storage
          mountPath: /app/repo
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-pvc
      - name: repo-storage
        emptyDir: {}
